# GURUJEE

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  build_android.sh  buildozer.spec  gurujee_fix.sh  install.sh  main.py  monkey_type.txt  pyproject.toml  read.md  requirements.txt
.claude/: settings.json  settings.local.json
.github/workflows/: build-apk.yml
.specify/: init-options.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
agents/: soul_identity.yaml
android/: build.gradle.kts  settings.gradle.kts
android/app/: build.gradle.kts
apk_src/: gurujee.kv  main.py
config/: agents.yaml  automation.yaml  models.yaml  security.yaml  voice.yaml
gurujee/: __main__.py
gurujee/agents/: automation_agent.py  base_agent.py  cron_agent.py  heartbeat_agent.py  memory_agent.py  soul_agent.py  user_agent.py
gurujee/ai/: client.py
gurujee/automation/: executor.py  tool_router.py
gurujee/config/: json_config.py  loader.py
gurujee/daemon/: gateway_daemon.py
gurujee/keystore/: keystore.py
gurujee/memory/: long_term.py  short_term.py
gurujee/server/: app.py  websocket.py
gurujee/setup/: __main__.py  onboard.py  wizard.py
launcher/: bootstrap.py  buildozer.spec  main.py
launcher_build/: bootstrap.py  buildozer.spec
tests/: conftest.py  test_ai_client.py  test_automation_actions.py  test_automation_agent.py  test_build_apk_workflow.py  test_cron_agent.py  test_executor_and_system.py  test_gateway_daemon.py  test_heartbeat_agent.py  test_install_sh.py  test_keystore.py  test_memory_agent.py  test_model_client.py  test_performance.py  test_server_automate.py  test_server_chat.py  test_setup_wizard.py  test_soul_agent.py  test_specify_git_scripts.py  test_tool_router.py  test_user_agent.py
(+86 files in other folders)
