[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "gurujee"
version = "0.1.0"
description = "Autonomous AI companion running on Android via Termux"
requires-python = ">=3.11"
readme = "README.md"

[project.scripts]
gurujee = "gurujee.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--tb=short"

[tool.coverage.run]
source = ["gurujee"]
omit = ["tests/*", "gurujee/__main__.py"]
